--- a/env.yml
+++ b/env.yml
@@ -1,39 +1,18 @@
-name: python-env
+name: plotting-notebooks
 channels:
   - conda-forge
   - defaults
 dependencies:
 # Dev-Libraries
-  - python=3.9
+  - python=3.10
   - ipykernel
-  - rope
+  - ipywidgets
   - flit
-  - python-dotenv
-  - pytest
-  - hypothesis
-  - pytest-cov
-  - coverage-badge
-  - pre-commit
-  - pylint
-  - black
-  - pip
-  - pip-tools
-  - pooch
-# Main Libraries
-  - pandas
-  - xarray
-  - dask
-  - bottleneck
-  - rasterio
-  - geojson
-  - bs4
-  - requests
-  - numexpr
   - scipy
-  - netcdf4
-  - matplotlib
-  - flask
-  - flask-restx
-  - pip:
-    - git+ssh://git@github.com/numbagg/numbagg.git
-  #   - git+https://github.com/IHCantabria/datahub.client@v0.8.6#egg=datahubClient --install-option="--no-deps"
+  - xarray 
+  - dask 
+  - netCDF4 
+  - bottleneck
+  - pydap
+  - cartopy
+  - black
